updated page title and homepage build

--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-react-app",
-  "homepage": "https://{username}.github.io/{repo-name}/",
+  "homepage": "https://joeleg96.github.io/recipe-finder/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
