--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-react-app",
   "homepage": "https://joeleg96.github.io/recipe-finder/",
-  "private": true,
+  "private": false,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
