--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-react-app",
+  "name": "recipe-finder",
   "homepage": "https://joeleg96.github.io/recipe-finder/",
   "private": false,
   "version": "0.0.0",
