removed trailing / in homepage and added them to image in json so they should build in github

--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "recipe-finder",
-  "homepage": "https://joeleg96.github.io/recipe-finder/",
+  "homepage": "https://joeleg96.github.io/recipe-finder",
   "private": false,
   "version": "0.0.0",
   "type": "module",
